# QuantForge

./: .env.example  .gitignore  QUANTFORGE_CONTEXT.md  docker-compose.yml  pyproject.toml  requirements.txt  walkthrough.md
quantforge/: __init__.py
quantforge/backtester/: __init__.py  engine.py  events.py  execution.py  portfolio.py
quantforge/core/: __init__.py  config.py  exceptions.py  logging.py
quantforge/data/: __init__.py  ingestion.py  models.py
quantforge/metrics/: __init__.py  performance.py  report.py  risk.py
quantforge/strategies/: __init__.py  base.py  registry.py  sma_crossover.py
tests/: test_engine.py  test_events.py  test_execution.py  test_ingestion.py  test_metrics.py  test_portfolio.py  test_scaffold.py  test_strategies.py
